tests/error/type_match/base_case_tuple_mismatched_elem_type1.bz
// error: unable to match type 'i64' to 'i32'
// note: while matching expression of type '[i64, float64, str]' to '[i32, float64, str]'
function test()
{
	let _: [i32, float64, str] = [i64, float64, str]();
}
